--- a/index.html
+++ b/index.html
@@ -180,11 +180,10 @@
             </div>
             
             <div style="position:absolute;top:20vh;left:0;background-color:rgba(255,255,255,0.6);color:#000;font-size:3vh">
-                {{northDir}}<br>
-                {{orientation}}<br>
-                {{orientationRotate}}<br>
-                {{northDir-centerTrimDeg}}<br>
-                {{tmpData}}
+                N:{{northDir}}<br>
+                TD:{{centerTrimDeg}}<br>
+                Itg:{{Math.floor(northDir-centerTrimDeg)}}<br>
+                Cy:{{tmpData}}
                                     
             </div>
             </div>
