--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 N:{{northDir}}<br>
                 TD:{{Math.floor(centerTrimDeg)}}<br>
                 Itg:{{(360+(Math.floor(centerDirByNorth-northDir)))%360}}<br>
-                Cy:{{(360+tmpData)%360}}
+                Cy:{{tmpData}}
                                     
             </div>
             </div>
