--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </div>
             
             <div style="position:absolute;top:20vh;left:0;background-color:rgba(255,255,255,0.6);color:#000;font-size:3vh">
-                N:{{northDir}}<br>
+                N:{{Math.floor(northDir)}}<br>
                 TD:{{Math.floor(centerTrimDeg)}}<br>
                 Itg:{{(360+(Math.floor(centerDirByNorth-northDir)))%360}}<br>
                 Cy:{{tmpData}}
