--- a/index.html
+++ b/index.html
@@ -182,12 +182,12 @@
             </div>
             </div>
             
-            <div style="position:absolute;top:20vh;left:0;background-color:rgba(255,255,255,0.6);color:#000;font-size:3vh">
+            <!--<div style="position:absolute;top:20vh;left:0;background-color:rgba(255,255,255,0.6);color:#000;font-size:3vh">
                 N:{{Math.floor(northDir)}}<br>
                 TD:{{Math.floor(centerTrimDeg)}}<br>
                 Cy:{{ingData}}
                                     
-            </div>
+            </div>-->
             </div>
     </body>
 </html>
