--- a/base.html
+++ b/base.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html manifest="cache.manifest">
+<!--<html lang="ja" manifest="cache.manifest">-->
+<html lang="ja">
 <head>
     <meta charset="utg-8">
     <title>test demo</title>
@@ -26,7 +27,7 @@
                 
             </a-entity>
             
-            <a-entity camera="userHeight: 1.6; fov:4.4563384; zoom:1;" look-controls direct="0 0 0" dragging="0" id="basecam" stabilize="30">
+            <a-entity camera="userHeight: 1.6; fov:4.4563384; zoom:1;" look-controls direct="0 0 0" dragging="0" id="basecam" stabilize="30" start-link>
                 <a-entity position="0 0.08 -3" id="cone">
                 <a-cone color = "tomato" height="0.02" radius-bottom="0.006" radius-top="0" position="0 0.012 0" rotation="0 0 0"></a-cone>
                 <a-cone color = "#0000ff" height="0.02" radius-bottom="0.005" radius-top="0" position="0 -0.012 0" rotation="180 0 0" id="cone"></a-cone>
