--- a/scope.html
+++ b/scope.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html manifest="cache.manifest">
+<!--<html lang="ja" manifest="cache.manifest">-->
+<html lang="ja">
 <head>
     <meta charset="utg-8">
     <title>test demo</title>
@@ -28,7 +29,7 @@
                 
             </a-entity>
             
-            <a-entity camera="userHeight: 1.6; fov:1.9; zoom:1" id="scopecam">
+            <a-entity camera="userHeight: 1.6; fov:1.9; zoom:1" id="scopecam" start-link>
             </a-entity>
         </a-scene>
     </body>
